--- a/Simple_Linear_Regression.ipynb
+++ b/Simple_Linear_Regression.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1X_6DHmr6EuCD6mrR8prVbR5Dj9x4tkLJ",
-      "authorship_tag": "ABX9TyOB8WUaidIEhNw/KGnFlwpt",
+      "authorship_tag": "ABX9TyNgNd3auoDiQziwJtcGp1Fi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,11 +29,27 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-eXH6T7aaN2S",
+        "id": "r89jL6gYsyyg",
         "colab_type": "text"
       },
       "source": [
-        "# **Simple Linear Regression**"
+        "# **Salary Prediction using Simple Linear Regression**\n",
+        "---\n",
+        "<p align=\"justify\">\n",
+        " A company is looking for workers for a new project, aiming the growth in the market in order to obtain the best professionals at the lowest possible cost. This responsibility was delegated to the company's HR department.\n",
+        "<p align=\"justify\">\n",
+        "The HR department decided to use the salary history of its former workers along with their respective years of experience, to propose new salaries in the future, consistent with the years of experience of the new workers, in a way that the company does not offer a very high salary for a worker with few years of experience, nor does it offer a salary so low that a great talent can accept another competing company proposal.\n",
+        "\n",
+        "![](https://drive.google.com/uc?export=view&id=1qfn5ZOvRht0t69tn6_r4brG8Xs5Bo-CK)\n",
+        "\n",
+        "\n",
+        "<p align=\"justify\">\n",
+        "The proposed model was a a Simple Linear Regression using the company's database, with the values of years of experience of former workers on the X axis and the respective salaries of former workers on the Y axis.\n",
+        "\n",
+        "<p align=\"justify\">\n",
+        "The database was divided into 2 parts, the Training part used the parameters values to generate the salary prediction curve the Testing part was used to compare the real values with the prediction curve generated in the training and check the accuracy percentage of generated model.\n",
+        "\n",
+        "**Code description is explained below:**"
       ]
     },
     {
@@ -58,7 +74,7 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -83,7 +99,7 @@
         "X= dataset.iloc[:,:-1].values\n",
         "Y= dataset.iloc[:,1].values"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -107,7 +123,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train,X_test,Y_train,Y_test=train_test_split(X,Y,test_size=1/3,random_state=0)"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -129,14 +145,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "000995cb-5c76-40b4-d3d1-01a413551171"
+        "outputId": "fab4dafd-1afd-48cd-b34c-02a911963864"
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "regressor= LinearRegression()\n",
         "regressor.fit(X_train, Y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,7 +164,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 26
         }
       ]
     },
@@ -171,7 +187,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "0b9148c0-66d4-4d8d-b8a7-1dea8c566672"
+        "outputId": "c00229e9-2383-4f3c-c791-05b3a0c7502e"
       },
       "source": [
         "plt.scatter(X_train,Y_train,color='red')\n",
@@ -181,7 +197,7 @@
         "plt.ylabel('Salary')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "display_data",
@@ -218,7 +234,7 @@
       "source": [
         "Y_pred= regressor.predict(X_test)\n"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -240,7 +256,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "b95c7d4b-4550-4fce-f9fa-2105727cf77a"
+        "outputId": "94af17fb-0a7e-4e72-8371-bdc0a364c743"
       },
       "source": [
         "plt.scatter(X_test,Y_test,color='red')\n",
@@ -250,7 +266,7 @@
         "plt.ylabel('Salary')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
