--- a/Simple_Linear_Regression.ipynb
+++ b/Simple_Linear_Regression.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1X_6DHmr6EuCD6mrR8prVbR5Dj9x4tkLJ",
-      "authorship_tag": "ABX9TyNgNd3auoDiQziwJtcGp1Fi",
+      "authorship_tag": "ABX9TyOBDu5ttF2Jv26ZUcpzWsUI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,10 +44,10 @@
         "\n",
         "\n",
         "<p align=\"justify\">\n",
-        "The proposed model was a a Simple Linear Regression using the company's database, with the values of years of experience of former workers on the X axis and the respective salaries of former workers on the Y axis.\n",
+        "The proposed model was a a Simple Linear Regression using the company's database, with the values of Years of Experience of former workers on the X axis and the respective Salaries of former workers on the Y axis.\n",
         "\n",
         "<p align=\"justify\">\n",
-        "The database was divided into 2 parts, the Training part used the parameters values to generate the salary prediction curve the Testing part was used to compare the real values with the prediction curve generated in the training and check the accuracy percentage of generated model.\n",
+        "The database was divided into 2 parts, the Training part used the parameters values to generate the salary prediction curve, the Testing part was used to compare the real values with the prediction curve generated in the training and check the accuracy percentage of generated model.\n",
         "\n",
         "**Code description is explained below:**"
       ]
@@ -59,7 +59,20 @@
         "colab_type": "text"
       },
       "source": [
-        "## **Importing the libraries**"
+        "## **Importing the libraries**\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "74m--yTF9AzV",
+        "colab_type": "text"
+      },
+      "source": [
+        "The 3 libraries needed for the project are imported.\n",
+        "- Pandas for data manipulation and analysis\n",
+        "- Numpy for mathematical operations\n",
+        "- Matplotlib for graphical visualizations"
       ]
     },
     {
@@ -74,7 +87,7 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,7 +97,21 @@
         "colab_type": "text"
       },
       "source": [
-        "## **Importing the data set**"
+        "## **Importing the data set**\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rRFTUdQ4819Z",
+        "colab_type": "text"
+      },
+      "source": [
+        "The .csv file containing the company's database is imported, separating the corresponding X-axis and Y-axis values.\n",
+        "\n",
+        "The values of the database header and how they are distributed can be viewed in the image below:\n",
+        "\n",
+        "![](https://drive.google.com/uc?export=view&id=1jTW_ld48FaYcIRzx1_3I8r0m_QYTYG3i)"
       ]
     },
     {
@@ -99,7 +126,7 @@
         "X= dataset.iloc[:,:-1].values\n",
         "Y= dataset.iloc[:,1].values"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,6 +140,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XImrUSiN-mHB",
+        "colab_type": "text"
+      },
+      "source": [
+        "The ***sklearn.model_selection*** library was used to divide the database between Training set and Test set. \n",
+        "\n",
+        "X and Y axes values were divided between Training set and Test set, resulting in 4 final vectors:\n",
+        "**X_train**, **X_test** and **Y_train**, **Y_test**\n",
+        "\n",
+        "Due to the small size of the database, it was agreed to be better to use 2/3 of the total values for Training and 1/3 of the total values for Testing."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ylrWFnHOuy_Q",
@@ -123,7 +165,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train,X_test,Y_train,Y_test=train_test_split(X,Y,test_size=1/3,random_state=0)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,6 +179,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nzp9MeeepTVN",
+        "colab_type": "text"
+      },
+      "source": [
+        "The sklearn.linear_model library was used to apply the **Simple Linear Regression** method.\n",
+        "\n",
+        "Using the **Training set** of X and Y axes, a salary prediction curve was created."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "n0ArEUncu821",
@@ -145,14 +199,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "fab4dafd-1afd-48cd-b34c-02a911963864"
+        "outputId": "f82429d6-a9f0-45b5-c380-ca24aeb5852f"
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "regressor= LinearRegression()\n",
         "regressor.fit(X_train, Y_train)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -164,9 +218,44 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 22
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WHH1-zurUCrO",
+        "colab_type": "text"
+      },
+      "source": [
+        "## **Predicting the Test Set Results**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N4jJo4WErKSW",
+        "colab_type": "text"
+      },
+      "source": [
+        "In this step was created a vector of salary predictions, using the values of Years of Experience from **Test set**, based on the regressor generated with the **Training set** in previous step.\n",
+        "\n",
+        "Comparing these predictions with the real values of Salaries in the **Test set**, is possible to calculate the accuracy of the model."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T1a2jhbwvD7I",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Y_pred= regressor.predict(X_test)"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -179,6 +268,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "X6oCjW43qZrn",
+        "colab_type": "text"
+      },
+      "source": [
+        "A graph was plotted with the real values of **Years of experience versus Salary** (red dots), present in the **Training set**. From these previously mentioned values, the model generated a salary prediction curve (blue line)."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "SaMmkJobvC6t",
@@ -187,7 +286,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "c00229e9-2383-4f3c-c791-05b3a0c7502e"
+        "outputId": "c69e21c9-3a35-456d-9348-e21a0c0dc8af"
       },
       "source": [
         "plt.scatter(X_train,Y_train,color='red')\n",
@@ -197,7 +296,7 @@
         "plt.ylabel('Salary')\n",
         "plt.show()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -217,34 +316,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WHH1-zurUCrO",
-        "colab_type": "text"
-      },
-      "source": [
-        "## **Predicting the Test Set Results**"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "T1a2jhbwvD7I",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "Y_pred= regressor.predict(X_test)\n"
-      ],
-      "execution_count": 28,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "J8aziaGYULou",
         "colab_type": "text"
       },
       "source": [
-        "## **Visualising the Training Set Results**"
+        "## **Visualising the Test Set Results**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bgPTaPsrwIVx",
+        "colab_type": "text"
+      },
+      "source": [
+        "From the **Test set** was used also the real values of **Years of Experience versus Salaries** (red dots), to compare with the salary prediction curve (blue line) obtained in the **Training set**."
       ]
     },
     {
@@ -256,7 +342,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "94af17fb-0a7e-4e72-8371-bdc0a364c743"
+        "outputId": "b6824236-1f01-4aa3-ac4e-60c79cbcf97d"
       },
       "source": [
         "plt.scatter(X_test,Y_test,color='red')\n",
@@ -266,7 +352,7 @@
         "plt.ylabel('Salary')\n",
         "plt.show()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
