--- a/Simple_Linear_Regression.ipynb
+++ b/Simple_Linear_Regression.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1X_6DHmr6EuCD6mrR8prVbR5Dj9x4tkLJ",
-      "authorship_tag": "ABX9TyOBDu5ttF2Jv26ZUcpzWsUI",
+      "authorship_tag": "ABX9TyMQhLJXBmYLpcPWWBOsknwk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,7 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -107,11 +107,11 @@
         "colab_type": "text"
       },
       "source": [
-        "The .csv file containing the company's database is imported, separating the corresponding X-axis and Y-axis values.\n",
+        "The .csv file containing the company's database is imported.\n",
         "\n",
-        "The values of the database header and how they are distributed can be viewed in the image below:\n",
+        "Separating Years of Experience as the corresponding X-axis values and the Salary as Y-axis values, it was obtained final data set..\n",
         "\n",
-        "![](https://drive.google.com/uc?export=view&id=1jTW_ld48FaYcIRzx1_3I8r0m_QYTYG3i)"
+        "The values of the database header and how they are distributed can be viewed in the image below:"
       ]
     },
     {
@@ -119,15 +119,91 @@
       "metadata": {
         "id": "bYfBzT_PuvpL",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        },
+        "outputId": "42216719-951b-40f9-f604-979f86f893f1"
       },
       "source": [
         "dataset= pd.read_csv('/content/drive/My Drive/Colab Notebooks/Simple Linear Regression/Salary_Data.csv')\n",
         "X= dataset.iloc[:,:-1].values\n",
-        "Y= dataset.iloc[:,1].values"
+        "Y= dataset.iloc[:,1].values\n",
+        "dataset.head()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>YearsExperience</th>\n",
+              "      <th>Salary</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1.1</td>\n",
+              "      <td>39343.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1.3</td>\n",
+              "      <td>46205.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1.5</td>\n",
+              "      <td>37731.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2.0</td>\n",
+              "      <td>43525.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2.2</td>\n",
+              "      <td>39891.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   YearsExperience   Salary\n",
+              "0              1.1  39343.0\n",
+              "1              1.3  46205.0\n",
+              "2              1.5  37731.0\n",
+              "3              2.0  43525.0\n",
+              "4              2.2  39891.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -165,7 +241,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train,X_test,Y_train,Y_test=train_test_split(X,Y,test_size=1/3,random_state=0)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -185,9 +261,9 @@
         "colab_type": "text"
       },
       "source": [
-        "The sklearn.linear_model library was used to apply the **Simple Linear Regression** method.\n",
+        "The **sklearn.linear_model** library was used to apply the **Simple Linear Regression** method.\n",
         "\n",
-        "Using the **Training set** of X and Y axes, a salary prediction curve was created."
+        "Using the **Training set** of X and Y values, a prediction curve is created."
       ]
     },
     {
@@ -197,16 +273,16 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 0
         },
-        "outputId": "f82429d6-a9f0-45b5-c380-ca24aeb5852f"
+        "outputId": "05f0a826-9a6f-47f8-a1e4-8e49ce3b4362"
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "regressor= LinearRegression()\n",
         "regressor.fit(X_train, Y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -218,7 +294,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 13
         }
       ]
     },
@@ -239,9 +315,9 @@
         "colab_type": "text"
       },
       "source": [
-        "In this step was created a vector of salary predictions, using the values of Years of Experience from **Test set**, based on the regressor generated with the **Training set** in previous step.\n",
+        "In this step was created a vector of predictions using the values of X-axis from **Test set**, based on the regressor generated with the **Training set** in previous step.\n",
         "\n",
-        "Comparing these predictions with the real values of Salaries in the **Test set**, is possible to calculate the accuracy of the model."
+        "Comparing these predictions with the real values of Y-axis in the **Test set**, is possible to calculate the accuracy of the model."
       ]
     },
     {
@@ -249,13 +325,37 @@
       "metadata": {
         "id": "T1a2jhbwvD7I",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        },
+        "outputId": "01e165ac-4044-4900-bb33-3b96496d8761"
       },
       "source": [
-        "Y_pred= regressor.predict(X_test)"
+        "Y_pred= regressor.predict(X_test)\n",
+        "\n",
+        "np.set_printoptions(precision=2)\n",
+        "print(np.concatenate((Y_pred.reshape(len(Y_pred),1), Y_test.reshape(len(Y_test),1)),1))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 40835.11  37731.  ]\n",
+            " [123079.4  122391.  ]\n",
+            " [ 65134.56  57081.  ]\n",
+            " [ 63265.37  63218.  ]\n",
+            " [115602.65 116969.  ]\n",
+            " [108125.89 109431.  ]\n",
+            " [116537.24 112635.  ]\n",
+            " [ 64199.96  55794.  ]\n",
+            " [ 76349.69  83088.  ]\n",
+            " [100649.14 101302.  ]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -274,7 +374,7 @@
         "colab_type": "text"
       },
       "source": [
-        "A graph was plotted with the real values of **Years of experience versus Salary** (red dots), present in the **Training set**. From these previously mentioned values, the model generated a salary prediction curve (blue line)."
+        "A graph was plotted with the real values of **X-axis values VERSUS Y-axis values** (red dots), present in the **Training set**. From these previously mentioned values, the model generated a prediction curve (blue line)."
       ]
     },
     {
@@ -286,7 +386,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "c69e21c9-3a35-456d-9348-e21a0c0dc8af"
+        "outputId": "ba24064e-0141-404a-da79-b452e46149cc"
       },
       "source": [
         "plt.scatter(X_train,Y_train,color='red')\n",
@@ -296,7 +396,7 @@
         "plt.ylabel('Salary')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -330,7 +430,7 @@
         "colab_type": "text"
       },
       "source": [
-        "From the **Test set** was used also the real values of **Years of Experience versus Salaries** (red dots), to compare with the salary prediction curve (blue line) obtained in the **Training set**."
+        "A graph was plotted with the real values of **X-axis values VERSUS Y-axis values** (red dots), present in the **Test set**, to compare with the prediction curve (blue line) obtained in the **Training set**."
       ]
     },
     {
@@ -342,7 +442,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "b6824236-1f01-4aa3-ac4e-60c79cbcf97d"
+        "outputId": "aae73a20-5654-486e-819b-604ea5647b27"
       },
       "source": [
         "plt.scatter(X_test,Y_test,color='red')\n",
@@ -352,7 +452,7 @@
         "plt.ylabel('Salary')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
