--- a/Simple_Linear_Regression.ipynb
+++ b/Simple_Linear_Regression.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "https://github.com/audrey-siqueira/Data-Science-Projects/blob/master/Simple_Linear_Regression.ipynb",
-      "authorship_tag": "ABX9TyNsL4gmGiEHxValSgoZlo7S",
+      "authorship_tag": "ABX9TyNb7yMCMMCfXQVMTcDrEqzh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "<p align=\"justify\">\n",
         "The HR department decided to use the salary history of its former workers along with their respective years of experience, to propose new salaries in the future, consistent with the years of experience of the new workers, in a way that the company does not offer a very high salary for a worker with few years of experience, nor does it offer a salary so low that a great talent can accept another competing company proposal.\n",
         "\n",
-        "![](https://drive.google.com/uc?id=1hsmkKsBEQ-1MBRwMEJb7nqHkXY9Hzwnj)\n",
+        "![Kernel & front-end diagram](https://drive.google.com/uc?id=1hsmkKsBEQ-1MBRwMEJb7nqHkXY9Hzwnj)\n",
         "\n",
         "<p align=\"justify\">\n",
         "The proposed model was a a Simple Linear Regression using the company's database, with the values of Years of Experience of former workers on the X axis and the respective Salaries of former workers on the Y axis.\n",
