--- a/Simple_Linear_Regression.ipynb
+++ b/Simple_Linear_Regression.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "https://github.com/audrey-siqueira/Data-Science-Projects/blob/master/Simple_Linear_Regression.ipynb",
-      "authorship_tag": "ABX9TyNb7yMCMMCfXQVMTcDrEqzh",
+      "authorship_tag": "ABX9TyNwC6dQz7QxTzUc1lbSX6Ni",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,8 +46,11 @@
         "<p align=\"justify\">\n",
         "The proposed model was a a Simple Linear Regression using the company's database, with the values of Years of Experience of former workers on the X axis and the respective Salaries of former workers on the Y axis.\n",
         "\n",
+        "![Kernel & front-end diagram](https://drive.google.com/uc?id=1N-UE1KHgnLl43LFvo9dS5fCzGTWkL1F6)\n",
+        "\n",
         "<p align=\"justify\">\n",
         "The database was divided into 2 parts, the Training part used the parameters values to generate the salary prediction curve, the Testing part was used to compare the real values with the prediction curve generated in the training and check the accuracy percentage of generated model.\n",
+        "\n",
         "\n",
         "\n",
         "\n",
