--- a/K_Means_Clustering.ipynb
+++ b/K_Means_Clustering.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "12bwKiTOwylOWHvKmX8cJGLDQzhmRB-Ci",
-      "authorship_tag": "ABX9TyPyfW1C9YoI2w77Q0HTIZDg",
+      "authorship_tag": "ABX9TyNKv6fhLipdMGSWwYL41m3m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "id": "r89jL6gYsyyg"
       },
       "source": [
-        "# **Grouping Customer using K-Means Clustering**\n",
+        "# **Grouping Customers using K-Means Clustering**\n",
         "---\n",
         "<p align=\"justify\">\n",
         "The data science department of a shopping mall has a database of its customers. The company wants to know which type of customers have a higher spending potential without the risk of default.\n",
